--- a/templates/auction_list.html
+++ b/templates/auction_list.html
@@ -30,70 +30,8 @@
 {% endblock %}
 
 {% block content %}
-<h2>Question {{question_num|e}} of {{total_questions}}</h2>
-<form action='{{form_action}}' method='GET'>
-	<input type='hidden' name='question_num' value='{{question_num}}'/>
-	<table id='question_table'>
-		<tr>
-			<td class='left_col'>
-				<div class='stats'>
-                    {{leftname|e}}
-					<dl>
-                        <img src='{{leftcountry}}' style='height:16px;width:auto'>
-                        {% if lefthealth >= 7 %}
-                        <img src='/static/images/health.jpg' style='height:16px;width:auto'>
-                        {% endif %}
-                        {% if leftorganic %}
-                        <img src='/static/images/bio.jpg' style='height:16px;width:auto'>
-                        {% endif %}
-                        {% if leftenvironment > 0.5 %}
-                        <img src='/static/images/eco.gif' style='height:16px;width:auto'>
-                        {% endif %}
-						{% for key in statkeys %}
-						<dt>{{ key|e }}</dt>
-						<dd>{{ leftstat[key]|e }}<dt>
-						{% endfor %}
-					</dl>
-				</div>
-				<button type='submit' id='left_button' name='clicked' value='left'>
-                                  Prefer this<br/>
-					<img src='{{image_left_source}}' />
-				</button>
-			</td>
-			<td class='middle_col'>
-				<button type='submit' id='middle_button' name='clicked' value='middle'>
-                                  mir egal
-				</button>
-			</td>
-			<td class='right_col'>
-				<div class='stats'>
-                    {{rightname|e}}
-					<dl>
-                        <img src='{{rightcountry}}' style='height:16px;width:auto'>
-                        {% if righthealth >= 7 %}
-                        <img src='/static/images/health.jpg' style='height:16px;width:auto'>
-                        {% endif %}
-                        {% if rightorganic %}
-                        <img src='/static/images/bio.jpg' style='height:16px;width:auto'>
-                        {% endif %}
-                        {% if rightenvironment > 0.5 %}
-                        <img src='/static/images/eco.gif' style='height:16px;width:auto'>
-                        {% endif %}
-						{% for key in statkeys %}
-						<dt>{{ key|e }}</dt>
-						<dd>{{ rightstat[key]|e }}<dt>
-						{% endfor %}
-					</dl>
-				</div>
-				<button type='submit' id='right_button' name='clicked' value='right'>
-                                  Prefer that<br/>
-					<img src='{{image_right_source}}' />
-				</button>
-			</td>
-		</tr>
-	</table>
-
-
-</form>
+<p>
+{% render_table request table%}
+</p>
 {% endblock %}
 
