--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 {% block head %}
-<title>{% block title %}{% endblock %} —  The Supermarkt Quiz</title>
+<title>{% block title %}{% endblock %} A Demo Auction</title>
 <link rel='stylesheet' href='/static/bootstrap/css/bootstrap.css' />
 <link rel='stylesheet' href='/static/css/style.css' />
-<style>
+
+    <!-- DataTables CSS --><link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.7/css/jquery.dataTables.css">
+    <!-- jQuery --><script type="text/javascript" charset="utf8" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <!-- DataTables --><script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.js"></script>
+
+    <style>
 main {
 	width: 800px;
 	margin: 1em auto 1em auto;
@@ -16,7 +21,7 @@ main {
 	box-shadow: 0px 0px 3px #CCC;
 }
 body {
-	background-color: #ff6600;
+	background-color: #C0C0C0;
 }
 
 #question_table td{
