--- a/templates/welcome_page.html
+++ b/templates/welcome_page.html
@@ -26,14 +26,16 @@ main .btn{
 <br/>
 <br/>
 
+<img src="http://www.diversityallianceforscience.com/wp-content/uploads/2015/04/Auction-gavel.jpg">
 <p align='center'>
-<a href='/auction_room' class='btn btn-primary'>Ready to Bid ▶</a>
+<a href='/auction_room' class='btn btn-primary'>Ready to Explore ▶</a>
 </p>
 
 <h3>
     Recent Activities of bidders:
 </h3>
     <table class='table table-striped'>
+        <!-- TODO: Should be replaced by log history -->
         <tr><td>User 2435325 put 4.52 on item Brot</td></tr>
         <tr><td>User soda put 4.52 on item Watch</td></tr>
     </table>
